# ScapeNet_khg

./: CMakeLists.txt  Makefile  README.md  main.c  mkfifo.sh  network_scan.c  network_scan.h  node_kill.c  node_kill.h  protocol.h  senser_main.c  senser_networkScan.c  senser_nodeKill.c  senser_portscan.c
src/: main.c  node_kill.c
